YTDB-651: PR #973 review — Math.clamp, NPE collapse, merge schedule walks